# czsu-multi-agent-text-to-sql

./: .cursorignore  .dockerignore  .env.example  .env_example  .gitignore  7.0.0  DBHANDLER_EXITED_FIX.md  DEBUG_ICONS_REFERENCE.md  DEBUG_TRACING_IMPLEMENTATION.md  Dockerfile  Dockerfile copy  Dockerfile_backup  FIXED_ISSUES_SUMMARY.md  MEMORY_OPTIMIZATION.md  PHASE4_PATTERNS_UPDATED.md  PHASE4_SIMPLIFIED.md  POSTGRES_CHECKPOINTER_FIXES.md  POSTGRES_LOOPING_ERROR_FIX.md  PSYCOPG_FIX.md  README.md  TESTING_RESULTS_PHASE4.md  analysis_results.json  analysis_results.jsonl  analysis_results.txt  analyze_endpoint_test_results_local_20250620_133109.json  api_server.py  build_frontend_features.py  chromadb_local_to_cloud.py  debug_checkpointer.py  debug_langsmith_experiments.py  evaluate_agent_output.py  langgraph.json  main.py  metadata_extraction_results.csv  openapi.yaml  package-lock.json  package.json  pyproject.toml  railway.toml  reinstall_libraries.bat  (+36 more)
.github/: copilot-instructions.md
CZSU_Multi_Agent_App/: __init__.py
Evaluations/: evaluate_agent_output_substring_evaluator_tool.py  evaluate_agent_output_using_LLM.ipynb  evaluate_agent_output_using_LLM.py  langsmith_async_client_reference.txt  langsmith_create_golden_dataset.ipynb  langsmith_create_golden_dataset_finding_selections.py  langsmith_create_golden_dataset_problematic2.ipynb  langsmith_evaluate_output.ipynb  langsmith_evaluation_reference.txt  phoenix_benchmark_evaluate_QA_classifications.ipynb  phoenix_evaluate_agent_output_substring_evaluator_tool.py
Evaluations/DEBUG/: debug_phoenix_evals__llm_as_a_judge.ipynb  test_evaluator__qa_llm_as_a_judge.ipynb
Evaluations/Goden_Datasets/: langsmith_create_golden_dataset.ipynb  langsmith_create_golden_dataset_selection_retrieval.py  langsmith_create_golden_dataset_simple.py
Evaluations/LangSmith_Evaluation/: 01_langsmith_evaluate_output_correctness.py  README.md  langsmith_evaluate.py  (+4 more)
api/: __init__.py  helpers.py  main.py
checkpointer/: __init__.py  checkpoint_refactoring.md  config.py  globals.py  postgres_checkpointer.py
data/: 101_PDFsam_32019824.pdf_llamaparse_parsed.txt  1_PDFsam_32019824.pdf_llamaparse_parsed.txt  201_PDFsam_32019824.pdf_llamaparse_parsed.txt  301_PDFsam_32019824.pdf_llamaparse_parsed.txt  401_PDFsam_32019824.pdf_llamaparse_parsed.txt  453_461_524.pdf_llamaparse_parsed.txt  501_PDFsam_32019824.pdf_llamaparse_parsed.txt  601_PDFsam_32019824.pdf_llamaparse_parsed.txt  661_PDFsam_32019824.pdf_llamaparse_parsed.txt  701_PDFsam_32019824.pdf_llamaparse_parsed.txt  801_PDFsam_32019824.pdf_llamaparse_parsed.txt  96_97_141.pdf_azure_doc_intelligence_parsed.txt  96_97_141.pdf_llamaparse_parsed.txt  PDFsam_merge__673_684.pdf_llamaparse_parsed - Copy (2).txt  PDFsam_merge__673_684.pdf_llamaparse_parsed - Copy.txt  PDFsam_merge__673_684.pdf_llamaparse_parsed copy 2.txt  PDFsam_merge__673_684.pdf_llamaparse_parsed copy.txt  PDFsam_merge__673_684.pdf_llamaparse_parsed.txt  __init__.py  chat_sessions.db  create_chromadb.py  csvs_to_sqllite.py  csvs_to_sqllite_02.py  czsu_data.db  datasets_selections_get_csvs.py  datasets_selections_get_csvs_01.py  get_one_selection_in_csv.ipynb  helpers.py  langgraph_checkpoints.db  pdf_to_chromadb copy.py  pdf_to_chromadb.py  pdf_to_chromadb__azure_doc_intelligence.py  pdf_to_chromadb__llamaparse_MarkdownElementNodeParser.py  pdf_to_chromadb__llamaparse_custom_separators.py  pdf_to_chromadb__llamaparse_tables_in_yaml.py  pdf_to_chromadb__markdown_MarkdownElementNodeParser.py  sqllite_to_csvs.py  upload_czsu_data_db_to_sqlite_cloud_03.py  upload_czsu_data_db_to_turso_sqlite_cloud_CLI_03.py  upload_czsu_data_db_to_turso_sqlite_cloud_curl_03.py
diagrams/: ANALYSIS_SUMMARY.md  CORRECTION_SUMMARY.md  README_DIAGRAMS.md  architecture_analysis_and_recommendations.md  used_services_diagram_2.md  used_services_diagram_6.md  used_services_diagram_6_final.md  used_services_diagram_8.md
from_arize_phoenix_docs/: analyze_data.py  generate_sql_query.py  main.py  router.py
frontend/: .env.local.example  README.md  package-lock.json  package.json  vercel.json
frontend_vue/: CONVERSION_GUIDE.md  CONVERSION_PROGRESS_REPORT.md  SETUP.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
metadata/: 02_extract_selection_descriptions_from_metadata.py  05_chromadb_local_to_cloud.py  __init__.py  chromadb_client_factory.py  chromadb_local_to_cloud__05.py  create_and_load_chromadb.py  create_and_load_chromadb__04.py  create_chromadb.py  extract_selection_descriptions_from_metadata.py  extract_selection_descriptions_from_metadata_using_all_3_layers.py  get_metadata_of_one_selection.py  get_metadata_schemas_all_selections.py  get_metadata_schemas_all_selections__01.py  rerank_debug.xlsx  search_comparison_for_debug.xlsx  selection_descriptions.csv
my_agent/: __init__.py  agent.py  agent_basic1.py  agent_basic1_multiple_queries.py  agent_basic2.py  agent_basic_reflection.py  agent_initial.py  agent_initial_1.py  agent_reflexion_3.py  agent_simple.py  agent_simple_2.py
other/: 1.ipynb  1.json  1.txt  1_structure.json  2.json  2.py  3.py  SUPABASE_CONNECTION_FIX_SUMMARY.md  extract_json_structure.py  instrument.py  monitor_health.py  t1.ipynb  t2.ipynb  t2.py  tempCodeRunnerFile.py  test_fastapi_startup.py  test_server_startup.py  test_supabase_connection.py  testing_PandasQueryTool.ipynb  testing_nodes.py  testing_tools.ipynb
tests/: __init__.py  helpers.py  test_analysis.md  test_concurrency.py  test_phase10_external_imports.py  test_phase12_comprehensive.py  test_phase12_final.py  test_phase12_performance.py  test_phase1_setup.py  test_phase2_config.py  test_phase3_utilities.py  test_phase4_models.py  test_phase5_auth.py  test_phase6_exceptions.py  test_phase7_middleware.py  test_phase8_analysis.py  test_phase8_bulk.py  test_phase8_catalog.py  test_phase8_chat.py  test_phase8_debug.py  test_phase8_feedback.py  test_phase8_health.py  test_phase8_messages.py  test_phase8_misc.py  test_phase9_main.py  test_startup_debug.bat  test_startup_debug.py
utils/: __init__.py  instrument.py
(+2537 files in other folders)
