[project]
name = "czsu-multi-agent-text-to-sql"
version = "0.1.0"
description = "A prototype project for Text to SQL app working in LangGraph and allowing to  query CZSU (Czech Statistical Office) publicly available data using natural language."
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Michael Miscanuk Name", email = "michael.miscanuk@gmail.com" } ]

# Web frameworks: fastapi, starlette, uvicorn, python-multipart
# Database: alembic, SQLAlchemy, psycopg, psycopg-pool
# Data processing: pandas, numpy, openpyxl, pyjstat, tqdm, pymupdf
# ML/AI: langchain, langgraph, openai, chromadb, cohere, tiktoken, langsmith, langchain-chroma, langchain-community, langchain-core, langchain-openai, langchain-text-splitters, langgraph-checkpoint, langgraph-checkpoint-postgres
# Utilities: requests, httpx, httpcore, python-dotenv, aiofiles, anyio, rank-bm25, certifi, charset-normalizer, idna, h11
# Serialization/Parsing: PyYAML, orjson, Jinja2, MarkupSafe, typing_extensions
# Auth/Security: authlib, PyJWT
# MCP: mcp
# Pydantic: pydantic, pydantic-settings, pydantic_core

dependencies = [
    "fastapi==0.115.9",
    "uvicorn==0.34.2",
    "starlette==0.45.3",
    "python-multipart==0.0.20",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "pydantic_core==2.33.2",
    "langchain==0.3.25",
    "langchain-core==0.3.63",
    "langchain-openai==0.3.18",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.24",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.7",
    "langgraph-checkpoint==2.0.26",
    "langgraph-checkpoint-postgres==2.0.21",
    "langsmith==0.3.34",
    "openai==1.82.1",
    "chromadb==1.0.11",
    "cohere==5.15.0",
    "psycopg[binary]==3.2.4",
    "psycopg-pool==3.2.6",
    "SQLAlchemy==2.0.40",
    "alembic==1.15.2",
    "authlib==1.5.2",
    "PyJWT==2.10.1",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "tqdm==4.67.1",
    "pandas==2.2.3",
    "numpy==2.2.5",
    "openpyxl==3.1.5",
    "pyjstat==2.4.0",
    "pymupdf>=1.26.0",
    "orjson==3.10.16",
    "PyYAML==6.0.2",
    "mcp==1.9.2",
    "aiofiles==24.1.0",
    "anyio==4.9.0",
    "tiktoken==0.9.0",
    "rank-bm25==0.2.2",
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "h11==0.16.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "typing_extensions",
    "pymupdf4llm>=0.0.5",
    "llama-parse>=0.4.0" 
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["czsu-multi-agent-text-to-sql"]

[tool.setuptools.package-dir]
"czsu-multi-agent-text-to-sql" = "czsu-multi-agent-text-to-sql"

[tool.setuptools.package-data]
"*" = ["**/*"]
