[project]
name = "czsu-multi-agent-text-to-sql"
version = "0.1.0"
description = "A prototype project for Text to SQL app working in LangGraph and allowing to  query CZSU (Czech Statistical Office) publicly available data using natural language."
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Michael Miscanuk Name", email = "michael.miscanuk@gmail.com" } ]

# Core API and FastAPI
# Database: PostgreSQL, SQLAlchemy, asyncpg, psycopg
# Data processing: pandas, numpy, openpyxl, pyjstat, tqdm
# PDF processing: llama-parse (LlamaParse only)
# ML/AI: langchain ecosystem, openai, chromadb, cohere
# Utilities: requests, httpx, python-dotenv, aiofiles, psutil
# Serialization/Parsing: PyYAML, orjson, Jinja2
# Auth/Security: authlib, PyJWT, python-jose
# MCP: mcp

dependencies = [
    # Core API and FastAPI
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "starlette==0.45.3",
    "brotli-asgi>=1.4.0",  # Brotli compression middleware
    
    # Pydantic for data validation
    "pydantic>=2.5.0",
    
    # LangChain ecosystem (core)
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langchain-openai>=1.1.5",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-anthropic>=1.3.0",
    "langchain_xai>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langsmith>=0.5.0",
    "langchain-mistralain>=1.1.1",
    
    # OpenAI and Azure OpenAI
    "openai>=1.108.1,<2",
    
    # ChromaDB for vector search
    "chromadb>=0.4.18",
    
    # Cohere for reranking
    "cohere==5.15.0",
    
    # Google Gemini
    "langchain-google-genai>=4.1.1",
    "langchain-groq>=1.1.1",
    
    # PostgreSQL database
    "psycopg[binary,pool]>=3.1.13",
    "psycopg-pool==3.2.6",
    
    # Authentication
    "PyJWT[crypto]>=2.8.0",
    
    # Essential utilities
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "tqdm==4.67.1",
    "tenacity>=8.2.0",
    
    # Google Drive download
    "gdown>=5.0.0",
    
    # Data processing
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "openpyxl==3.1.5",
    "pyjstat==2.4.0",
    
    # PDF Processing
    "llama-parse>=0.4.0",  # Premium LLM-based parser (requires API key)
    "azure-ai-documentintelligence>=1.0.0",  # Azure Document Intelligence SDK
    
    # JSON/serialization
    
    # MCP server
    "langchain-mcp-adapters>=0.1.0",  # Official LangChain MCP adapters
    
    # Async utilities
    
    # Text processing
    "tiktoken==0.9.0",
    "rank-bm25>=0.2.2",
    
    # HTTP and networking
    "httpx==0.28.1",
    
    # Templates
    
    # Type checking
    
    # LlamaIndex OpenAI integration
    "llama-index-llms-openai==0.6.6",
    "llama-index-llms-azure-openai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    # Jupyter/IPython support for development
    "ipython>=8.0.0",
    
    # Development and monitoring utilities
    "psutil>=5.9.0",

    # Graphs
    "graphviz",

    # Call graph visualization
    "pyan3>=1.2.0",

    # Testing
    "httpx"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "tests*", "my_agent*", "data*", "metadata*", "checkpointer*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.txt", "*.md", "*.json", "*.yaml", "*.yml", "*.toml", "*.cfg", "*.ini"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
